[gd_scene load_steps=11 format=3 uid="uid://bic1j8ofgobyq"]

[ext_resource type="Theme" uid="uid://djs17jejidaca" path="res://Battle/default_theme.tres" id="1_l2koo"]
[ext_resource type="PackedScene" uid="uid://cmjrf0ne8f0i" path="res://Battle/window_default.tscn" id="2_8ha6l"]
[ext_resource type="Script" uid="uid://dt06awuyrvn0g" path="res://Battle/battle.gd" id="2_dw4jg"]
[ext_resource type="PackedScene" uid="uid://bfa3nj3sh1b0h" path="res://Battle/player_button.tscn" id="3_7sfm4"]
[ext_resource type="Texture2D" uid="uid://dbvboavv7ux35" path="res://assets/bg1.png" id="3_ol6im"]
[ext_resource type="Script" uid="uid://spl0qg4x1eih" path="res://Battle/menu.gd" id="4_0npn6"]
[ext_resource type="PackedScene" uid="uid://bmwyoey2t5cx2" path="res://Battle/enemy_button.tscn" id="4_lcjiy"]
[ext_resource type="PackedScene" uid="uid://bka4ax6ube6a3" path="res://Battle/player_info_bar.tscn" id="4_mhv3b"]
[ext_resource type="PackedScene" uid="uid://kbbtw168dn82" path="res://Battle/menu_cursor.tscn" id="8_mhv3b"]
[ext_resource type="PackedScene" uid="uid://36n4oskaammn" path="res://Battle/down_cursor.tscn" id="10_ol6im"]

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_l2koo")
script = ExtResource("2_dw4jg")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.054902, 0.141176, 0.329412, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ol6im")

[node name="Enemies" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_0npn6")
metadata/_edit_lock_ = true

[node name="EnemyButton" parent="Enemies" instance=ExtResource("4_lcjiy")]
layout_mode = 0
offset_left = 181.0
offset_top = 49.0
offset_right = 197.0
offset_bottom = 65.0
focus_neighbor_left = NodePath("../EnemyButton3")
focus_neighbor_top = NodePath("../EnemyButton3")

[node name="EnemyButton2" parent="Enemies" instance=ExtResource("4_lcjiy")]
layout_mode = 0
offset_left = 190.0
offset_top = 78.0
offset_right = 206.0
offset_bottom = 94.0
focus_neighbor_left = NodePath("../EnemyButton")
focus_neighbor_top = NodePath("../EnemyButton")
focus_neighbor_right = NodePath("../EnemyButton3")
focus_neighbor_bottom = NodePath("../EnemyButton3")

[node name="EnemyButton3" parent="Enemies" instance=ExtResource("4_lcjiy")]
layout_mode = 0
offset_left = 199.0
offset_top = 109.0
offset_right = 215.0
offset_bottom = 125.0
focus_neighbor_right = NodePath("../EnemyButton")
focus_neighbor_bottom = NodePath("../EnemyButton")

[node name="Players" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_0npn6")
metadata/_edit_lock_ = true

[node name="PlayerButton" parent="Players" instance=ExtResource("3_7sfm4")]
layout_mode = 0
offset_left = 68.0
offset_top = 45.0
offset_right = 68.0
offset_bottom = 45.0

[node name="PlayerButton2" parent="Players" instance=ExtResource("3_7sfm4")]
layout_mode = 0
offset_left = 55.0
offset_top = 75.0
offset_right = 55.0
offset_bottom = 75.0

[node name="PlayerButton3" parent="Players" instance=ExtResource("3_7sfm4")]
layout_mode = 0
offset_left = 41.0
offset_top = 107.0
offset_right = 41.0
offset_bottom = 107.0

[node name="PlayerButton4" parent="Players" instance=ExtResource("3_7sfm4")]
layout_mode = 0
offset_left = 29.0
offset_top = 139.0
offset_right = 29.0
offset_bottom = 139.0

[node name="GUIMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Bottom" type="HBoxContainer" parent="GUIMargin"]
custom_minimum_size = Vector2(0, 52)
layout_mode = 2
size_flags_vertical = 8

[node name="Enemies" parent="GUIMargin/Bottom" instance=ExtResource("2_8ha6l")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="GUIMargin/Bottom/Enemies"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_right = 0

[node name="VBoxContainer" type="VBoxContainer" parent="GUIMargin/Bottom/Enemies/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -2

[node name="Label" type="Label" parent="GUIMargin/Bottom/Enemies/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ENEMY"

[node name="Label2" type="Label" parent="GUIMargin/Bottom/Enemies/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ENEMY"

[node name="Label3" type="Label" parent="GUIMargin/Bottom/Enemies/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ENEMY"

[node name="Players" parent="GUIMargin/Bottom" instance=ExtResource("2_8ha6l")]
layout_mode = 2
size_flags_stretch_ratio = 2.0

[node name="MarginContainer" type="MarginContainer" parent="GUIMargin/Bottom/Players"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_right = 0

[node name="PlayerInfos" type="VBoxContainer" parent="GUIMargin/Bottom/Players/MarginContainer"]
layout_mode = 2

[node name="PlayerInfoBar" parent="GUIMargin/Bottom/Players/MarginContainer/PlayerInfos" instance=ExtResource("4_mhv3b")]
layout_mode = 2

[node name="PlayerInfoBar2" parent="GUIMargin/Bottom/Players/MarginContainer/PlayerInfos" instance=ExtResource("4_mhv3b")]
layout_mode = 2

[node name="PlayerInfoBar3" parent="GUIMargin/Bottom/Players/MarginContainer/PlayerInfos" instance=ExtResource("4_mhv3b")]
layout_mode = 2

[node name="PlayerInfoBar4" parent="GUIMargin/Bottom/Players/MarginContainer/PlayerInfos" instance=ExtResource("4_mhv3b")]
layout_mode = 2

[node name="Options" parent="." instance=ExtResource("2_8ha6l")]
custom_minimum_size = Vector2(54, 52)
layout_mode = 0
offset_left = 22.0
offset_top = 184.0
offset_right = 76.0
offset_bottom = 236.0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 8
size_flags_stretch_ratio = 2.0

[node name="Options" type="VBoxContainer" parent="Options"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.5
offset_bottom = 9.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -5
script = ExtResource("4_0npn6")

[node name="Button" type="Button" parent="Options/Options"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../Button4")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../Button2")
text = "FIGHT"

[node name="Button2" type="Button" parent="Options/Options"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../Button")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../Button3")
text = "SKILL"

[node name="Button3" type="Button" parent="Options/Options"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../Button2")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../Button4")
text = "ITEM"

[node name="Button4" type="Button" parent="Options/Options"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../Button3")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../Button")
text = "DEFEND"

[node name="MenuCursor" parent="." instance=ExtResource("8_mhv3b")]
layout_mode = 1
offset_left = 10.0
offset_top = 186.0
offset_right = -230.0
offset_bottom = -38.0

[node name="DownCursor" parent="." instance=ExtResource("10_ol6im")]
layout_mode = 0
offset_left = 200.0
offset_top = 24.0
offset_right = 216.0
offset_bottom = 40.0

[connection signal="button_pressed" from="Enemies" to="." method="_on_enemies_button_pressed"]
[connection signal="button_pressed" from="Players" to="." method="_on_players_button_pressed"]
[connection signal="button_pressed" from="Options/Options" to="." method="_on_options_button_pressed"]
